// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders filled 1`] = `
<RCTScrollView
  contentContainerStyle={
    Object {
      "alignItems": "center",
      "marginHorizontal": 16,
    }
  }
>
  <View>
    <View
      accessibilityIgnoresInvertColors={true}
      style={
        Object {
          "backgroundColor": "transparent",
          "overflow": "hidden",
          "position": "relative",
        }
      }
    >
      <Image
        onLoad={[Function]}
        source={
          Object {
            "uri": "https://m.media-amazon.com/images/M/MV5BYmU1NDRjNDgtMzhiMi00NjZmLTg5NGItZDNiZjU5NTU4OTE0XkEyXkFqcGdeQXVyNzkwMjQ5NzM@._V1_SX300.jpg",
          }
        }
        style={
          Object {
            "bottom": 0,
            "height": 200,
            "left": 0,
            "position": "absolute",
            "resizeMode": "contain",
            "right": 0,
            "top": 0,
            "width": 200,
          }
        }
        testID="RNE__Image"
        theme={
          Object {
            "colors": Object {
              "black": "#242424",
              "disabled": "hsl(208, 8%, 90%)",
              "divider": "#bcbbc1",
              "error": "#ff190c",
              "grey0": "#393e42",
              "grey1": "#43484d",
              "grey2": "#5e6977",
              "grey3": "#86939e",
              "grey4": "#bdc6cf",
              "grey5": "#e1e8ee",
              "greyOutline": "#bbb",
              "platform": Object {
                "android": Object {
                  "error": "#f44336",
                  "grey": "rgba(0, 0, 0, 0.54)",
                  "primary": "#2196f3",
                  "secondary": "#9C27B0",
                  "success": "#4caf50",
                  "warning": "#ffeb3b",
                },
                "ios": Object {
                  "error": "#ff3b30",
                  "grey": "#7d7d7d",
                  "primary": "#007aff",
                  "searchBg": "#dcdce1",
                  "secondary": "#5856d6",
                  "success": "#4cd964",
                  "warning": "#ffcc00",
                },
              },
              "primary": "#2089dc",
              "searchBg": "#303337",
              "secondary": "#ca71eb",
              "success": "#52c41a",
              "warning": "#faad14",
              "white": "#ffffff",
            },
          }
        }
        transition={true}
      />
      <View
        accessibilityElementsHidden={true}
        importantForAccessibility="no-hide-descendants"
        pointerEvents="none"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "opacity": 1,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#bdbdbd",
              "height": 200,
              "justifyContent": "center",
              "resizeMode": "contain",
              "width": 200,
            }
          }
          testID="RNE__Image__placeholder"
        >
          <ActivityIndicator
            animating={true}
            color="#999999"
            hidesWhenStopped={true}
            size="small"
          />
        </View>
      </View>
      <View
        style={
          Object {
            "height": 200,
            "resizeMode": "contain",
            "width": 200,
          }
        }
      />
    </View>
    <Text
      style={
        Object {
          "color": "#242424",
          "fontSize": 35,
        }
      }
    >
      Star Wars: Episode V - The Empire Strikes Back
    </Text>
    <Text
      style={
        Object {
          "color": "#242424",
          "fontSize": 27.5,
        }
      }
    >
      Year: 
      1980
    </Text>
    <Text
      style={
        Object {
          "color": "#242424",
        }
      }
    >
      Plot: 
      After the Rebels are brutally overpowered by the Empire on the ice planet Hoth, Luke Skywalker begins Jedi training with Yoda, while his friends are pursued by Darth Vader and a bounty hunter named Boba Fett all over the galaxy.
    </Text>
    <Text
      style={
        Object {
          "color": "#242424",
        }
      }
    >
      Rated: 
      PG
    </Text>
    <Text
      style={
        Object {
          "color": "#242424",
        }
      }
    >
      Released: 
      20 Jun 1980
    </Text>
    <Text
      style={
        Object {
          "color": "#242424",
        }
      }
    >
      Genre: 
      Action, Adventure, Fantasy, Sci-Fi
    </Text>
    <Text
      style={
        Object {
          "color": "#242424",
        }
      }
    >
      Director: 
      Irvin Kershner
    </Text>
    <Text
      style={
        Object {
          "color": "#242424",
        }
      }
    >
      Ratings:
    </Text>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#242424",
          }
        }
      >
        Source: 
        Internet Movie Database
      </Text>
      <Text
        style={
          Object {
            "color": "#242424",
          }
        }
      >
        Value: 
        8.7/10
      </Text>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#242424",
          }
        }
      >
        Source: 
        Rotten Tomatoes
      </Text>
      <Text
        style={
          Object {
            "color": "#242424",
          }
        }
      >
        Value: 
        94%
      </Text>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#242424",
          }
        }
      >
        Source: 
        Metacritic
      </Text>
      <Text
        style={
          Object {
            "color": "#242424",
          }
        }
      >
        Value: 
        82/100
      </Text>
    </View>
  </View>
</RCTScrollView>
`;

exports[`renders half-empty 1`] = `
<RCTScrollView
  contentContainerStyle={
    Object {
      "alignItems": "center",
      "marginHorizontal": 16,
    }
  }
>
  <View>
    <View
      accessibilityIgnoresInvertColors={true}
      style={
        Object {
          "backgroundColor": "transparent",
          "overflow": "hidden",
          "position": "relative",
        }
      }
    >
      <Image
        onLoad={[Function]}
        source={
          Object {
            "uri": "https://m.media-amazon.com/images/M/MV5BYmU1NDRjNDgtMzhiMi00NjZmLTg5NGItZDNiZjU5NTU4OTE0XkEyXkFqcGdeQXVyNzkwMjQ5NzM@._V1_SX300.jpg",
          }
        }
        style={
          Object {
            "bottom": 0,
            "height": 200,
            "left": 0,
            "position": "absolute",
            "resizeMode": "contain",
            "right": 0,
            "top": 0,
            "width": 200,
          }
        }
        testID="RNE__Image"
        theme={
          Object {
            "colors": Object {
              "black": "#242424",
              "disabled": "hsl(208, 8%, 90%)",
              "divider": "#bcbbc1",
              "error": "#ff190c",
              "grey0": "#393e42",
              "grey1": "#43484d",
              "grey2": "#5e6977",
              "grey3": "#86939e",
              "grey4": "#bdc6cf",
              "grey5": "#e1e8ee",
              "greyOutline": "#bbb",
              "platform": Object {
                "android": Object {
                  "error": "#f44336",
                  "grey": "rgba(0, 0, 0, 0.54)",
                  "primary": "#2196f3",
                  "secondary": "#9C27B0",
                  "success": "#4caf50",
                  "warning": "#ffeb3b",
                },
                "ios": Object {
                  "error": "#ff3b30",
                  "grey": "#7d7d7d",
                  "primary": "#007aff",
                  "searchBg": "#dcdce1",
                  "secondary": "#5856d6",
                  "success": "#4cd964",
                  "warning": "#ffcc00",
                },
              },
              "primary": "#2089dc",
              "searchBg": "#303337",
              "secondary": "#ca71eb",
              "success": "#52c41a",
              "warning": "#faad14",
              "white": "#ffffff",
            },
          }
        }
        transition={true}
      />
      <View
        accessibilityElementsHidden={true}
        importantForAccessibility="no-hide-descendants"
        pointerEvents="none"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "opacity": 1,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#bdbdbd",
              "height": 200,
              "justifyContent": "center",
              "resizeMode": "contain",
              "width": 200,
            }
          }
          testID="RNE__Image__placeholder"
        >
          <ActivityIndicator
            animating={true}
            color="#999999"
            hidesWhenStopped={true}
            size="small"
          />
        </View>
      </View>
      <View
        style={
          Object {
            "height": 200,
            "resizeMode": "contain",
            "width": 200,
          }
        }
      />
    </View>
    <Text
      style={
        Object {
          "color": "#242424",
          "fontSize": 35,
        }
      }
    >
      Star Wars: Episode V - The Empire Strikes Back
    </Text>
    <Text
      style={
        Object {
          "color": "#242424",
          "fontSize": 27.5,
        }
      }
    >
      Year: 
      1980
    </Text>
  </View>
</RCTScrollView>
`;
